cmake_minimum_required(VERSION 2.8)
project(test_opengl)

set(CMAKE_VERBOSE_MAKEFILE OFF)

include_directories(/usr/local/include)
include_directories(glad/include)
include_directories(src/Shaders)
include_directories(src/)
include_directories(includes/)

set(CMAKE_CXX_FLAGS "-g -std=c++11 -Wformat")

# glfw的库目录路径
link_directories(/usr/local/Cellar/glfw/3.3.4/lib)
add_executable(01 01.cpp glad/src/glad.c)
add_executable(02 02.cpp glad/src/glad.c)
add_executable(03 03.cpp glad/src/glad.c)
add_executable(04 04.cpp glad/src/glad.c)
add_executable(05 05.cpp glad/src/glad.c)
add_executable(06 06.cpp glad/src/glad.c)
add_executable(07 07.cpp glad/src/glad.c)
add_executable(08 08.cpp glad/src/glad.c)
add_executable(09 09.cpp glad/src/glad.c)
add_executable(10 10.cpp glad/src/glad.c)
add_executable(11 11.cpp glad/src/glad.c)
add_executable(12 12.cpp glad/src/glad.c)

# 指定glfw库
target_link_libraries(01 GLFW)
target_link_libraries(02 GLFW)
target_link_libraries(03 GLFW)
target_link_libraries(04 GLFW)
target_link_libraries(05 GLFW)
target_link_libraries(06 GLFW)
target_link_libraries(07 GLFW)
target_link_libraries(08 GLFW)
target_link_libraries(09 GLFW)
target_link_libraries(10 GLFW)
target_link_libraries(11 GLFW)
target_link_libraries(12 GLFW)
